test_suite/alan-2022-examples/failing/005920_mutation.alan
source s begin leave 291 <= to 8 end
